# server/main.py
@@ -1,8 +1,12 @@
-from dotenv import load_dotenv
+import asyncio
+from typing import List
 
-from server.utils import find_relative_path
+from dotenv import load_dotenv
+from pydantic.main import BaseModel
 
 load_dotenv()
+
+from server.utils import find_relative_path
 import pinecone
 from fastapi.staticfiles import StaticFiles
 from base64 import b64encode
@@ -10,38 +14,55 @@ from urllib.parse import urlencode
 import markdown2
 # temp remove
 import uvicorn
-from fastapi import FastAPI
-from fastapi.responses import HTMLResponse, RedirectResponse, JSONResponse
-from starlette.middleware.sessions import SessionMiddleware
-from fastapi.middleware.cors import CORSMiddleware
-# temp remove
-from fastapi import Request
-from loguru import logger
-from server.routers.twitter_utils import tweeter_api_request
-from server.datastore.users_repository import get_users_repository
 import os
+from fastapi.responses import HTMLResponse, JSONResponse
+from starlette.middleware.sessions import SessionMiddleware
 
-from server.models.base import SearchResponse, SearchRequest
+from fastapi import FastAPI
+from starlette.responses import RedirectResponse
+from fastapi.middleware.cors import CORSMiddleware
 from fastapi import Depends, Body
-from server.routers.google_utils import google_search
+# temp remove
+from fastapi import Request, HTTPException
+from fastapi.security import HTTPBearer, HTTPAuthorizationCredentials
+from loguru import logger
+from server.services.twitter_ops import tweeter_api_request
+from server.datastore.users_repository import get_users_repository, AppUser
+from server.models.base import SearchResponse, SearchRequest, SourceReadRequest, Source
+from server.services.web_ops import duckduckgo_search, read_source_api
 from server.models.base import TwitterAPIRequest
-from server.routers.auth0_utils import validate_token, no_auth_user
-from server.routers.auth0_utils import auth0_callback_request, auth0_login_request
+from server.services.auth0_ops import auth0_callback_request, auth0_login_request, validate_oauth_token
+from fastapi.responses import StreamingResponse
+import json
 
-# 0. Implement Google search endpoint
-# 1. test locally
-# 2. deploy to heroku - docker, env variables
-# 3. test on openai
-# 4. openapi error response
+# Register/Login page
+# registration mechanism
+# twitter login
+# authenticate in ChatGPT - Ask ChatGPT to log you in with your twitter access_token.
 # 5. Automated social media agent: goal, topics, personality (imitate my style), tweets and replies rate
 
 origins = [
     "http://localhost",
     "http://localhost:8000",
-    "https://social.rolebotics.com",
-    "http://social.rolebotics.com",
-    "https://chat.openai.com"
+    "https://www.rolebotics.com",
+    "http://www.rolebotics.com",
+    "http://gptweet.rolebotics.com",
+    "https://gptweet.rolebotics.com",
+    "https://chat.openai.com",
+
 ]
+
+bearer_scheme = HTTPBearer()
+BEARER_TOKEN = os.environ.get("BEARER_TOKEN")
+assert BEARER_TOKEN is not None
+
+
+def validate_server_token(credentials: HTTPAuthorizationCredentials = Depends(bearer_scheme)):
+    if credentials.scheme != "Bearer" or credentials.credentials != BEARER_TOKEN:
+        raise HTTPException(status_code=401, detail="Invalid or missing token")
+    return credentials
+
+
 app = FastAPI()
 app.mount("/.well-known", StaticFiles(directory=find_relative_path(".well-known")), name="static")
 # app.add_middleware(SessionMiddleware, secret_key="your-secret-key")
@@ -54,6 +75,22 @@ app.add_middleware(
     allow_methods=["*"],
     allow_headers=["*"],
 )
+from starlette.middleware.base import BaseHTTPMiddleware
+
+
+class HttpsRedirectMiddleware(BaseHTTPMiddleware):
+    async def dispatch(self, request: Request, call_next):
+        forwarded_proto = request.headers.get("X-Forwarded-Proto", "http")
+        if forwarded_proto != "https":
+            secure_url = request.url.replace(scheme="https")
+            logger.info(f"Redirecting to {secure_url}")
+            logger.debug(f"X-Forwarded-Proto header:  {forwarded_proto}")
+            return RedirectResponse(url=secure_url, status_code=301)
+        response = await call_next(request)
+        return response
+
+
+app.add_middleware(HttpsRedirectMiddleware)
 app.add_middleware(SessionMiddleware, secret_key=secret_key)
 
 # Create a sub-application, in order to access just the query endpoint in an OpenAPI schema, found at http://0.0.0.0:8000/sub/openapi.json when the app is running locally
@@ -92,7 +129,6 @@ app.mount("/.well-known", StaticFiles(directory=".well-known"), name="static")
 
 # app.mount("/sub", sub_app)
 
-
 @app.get("/auth0/callback")
 async def auth0_callback(request: Request):
     logger.info(f'auth0_callback')
@@ -113,16 +149,54 @@ async def auth0_login(request: Request):
     return await auth0_login_request(request)
 
 
+class Message(BaseModel):
+    role: str
+    content: str
+
+
+class ChatBody(BaseModel):
+    messages: List[Message]
+    key: str | None
+    prompt: str
+
+
+def generate_chunks(data):
+    yield json.dumps(data).encode()
+
+
+@app.post("/chat")
+@app.post("/api/chat")
+async def chat_endpoint(request: Request, chat_body: ChatBody):
+    try:
+        logger.info(f'Chat request arrived :) {chat_body}')
+        logger.info(f'Request headers: {request.headers}')
+        logger.info(f'Request query params: {request.query_params}')
+        # logger.info(f'Request auth: {request.auth}')
+        # logger.debug(f'Request user: {request.user}')
+        # logger.debug(f'Request client: {request.client}')
+        # logger.debug(f'Request session: {request.session}')
+        # await asyncio.sleep(5)  # Simulating a long-running task
+        data = {"result": "success"}
+        return StreamingResponse(generate_chunks(data), media_type="application/json")
+    except asyncio.CancelledError:
+        # Clean up any resources if necessary and return a response
+        return {"result": "cancelled"}
+
+
 @app.post(
     "/twitter/api"
 )
 async def tweeter_api(
         request: TwitterAPIRequest = Body(...),
-        user=Depends(no_auth_user)
+        user: AppUser = Depends(validate_oauth_token)
 ):
+    logger.debug(f'request: {request}')
     content = await tweeter_api_request(request, user)
+
     return JSONResponse(content=content)
 
+
+# dependencies=[Depends(validate_token)]
 
 # @sub_app.post(
 #     "/twitter/api"
@@ -135,14 +209,27 @@ async def tweeter_api(
 
 
 @app.post(
-    "/google/api",
+    "/google/search",
     response_model=SearchResponse
 )
 async def google_api(
         request: SearchRequest = Body(...),
-        user=Depends(validate_token)
+        user: AppUser = Depends(validate_oauth_token)
 ):
-    return await google_search(request)
+    # user=Depends(validate_token) set validation
+    return await duckduckgo_search(request)
+
+
+@app.post(
+    "/source/read",
+    response_model=Source
+)
+async def read_source(
+        request: SourceReadRequest = Body(...),
+        user: AppUser = Depends(validate_oauth_token)
+):
+    # user=Depends(validate_token) set validation
+    return await read_source_api(request)
 
 
 # @sub_app.post(
@@ -155,7 +242,7 @@ async def google_api(
 # ):
 #     return await google_search(request)
 
-
+@app.get("/privacy", response_class=HTMLResponse)
 @app.get("/legal-info", response_class=HTMLResponse)
 # @sub_app.get("/legal-info", response_class=HTMLResponse)
 async def legal_info():
@@ -167,7 +254,7 @@ async def legal_info():
     return HTMLResponse(html_content)
 
 
-@app.get("/", response_class=HTMLResponse)
+@app.get("/home", response_class=HTMLResponse)
 # @sub_app.get("/home", response_class=HTMLResponse)
 async def index():
     logger.info(f'home pwd {os.getcwd()}')
