# server/services/browse.py
@@ -1,35 +1,40 @@
 import asyncio
 import hashlib
+import time
 from dataclasses import dataclass
-from typing import Optional
+from typing import Optional, List
 
 import requests
 from bs4 import BeautifulSoup
-
-from server.services.llm_utils import async_chat_completion, create_chat_completion, ChatRequest
 from loguru import logger
 
+from server.models.base import SearchResult, Source
+from server.services.llm_utils import async_chat_completion, ChatRequest
 
 
-def scrape_text(url) -> Optional[str]:
-    response = requests.get(url)
+async def scrape_text(source: Source,timeout:float=6.0) -> Source:
+    try:
+        logger.debug(f'getting {source.link}')
+        start = time.time()
+        response = requests.get(source.link,timeout=timeout)
+        logger.debug(f'{source.link} returned after {time.time()-start} seconds')
+        if response.status_code >= 400:
+            logger.warning(f'response status: {response.status_code} = {response.text}')
+            # exception = HTTPException(status_code=response.status_code, detail=response.text)
+            return source.copy(update={'text': response.text})
+        soup = BeautifulSoup(response.text, "html.parser")
 
-    # Check if the response contains an HTTP error
-    if response.status_code >= 400:
-        logger.warning(f'response status: {response.status_code} = {response.text}')
-        return None
+        for script in soup(["script", "style"]):
+            script.extract()
 
-    soup = BeautifulSoup(response.text, "html.parser")
-
-    for script in soup(["script", "style"]):
-        script.extract()
-
-    text = soup.get_text()
-    lines = (line.strip() for line in text.splitlines())
-    chunks = (phrase.strip() for line in lines for phrase in line.split("  "))
-    text = '\n'.join(chunk for chunk in chunks if chunk)
-
-    return text
+        text = soup.get_text()
+        lines = (line.strip() for line in text.splitlines())
+        chunks = (phrase.strip() for line in lines for phrase in line.split("  "))
+        text = '\n'.join(chunk for chunk in chunks if chunk)
+        return source.copy(update={'text': text})
+    except Exception as e:
+        text = f'Error: {e.__repr__()}'
+        return source.copy(update={'text': text})
 
 
 def extract_hyperlinks(soup):
@@ -94,6 +99,40 @@ class TextSummary:
     summary: str
 
 
+# async def scrape_results(results: List[SearchResult], timeout: int = 6) -> List[SearchResult]:
+#     res_map = {r.link: r for r in results}
+#     tasks = [scrape_text(result) for result in results]
+#     start = time.time()
+#     finished, unfinished = await asyncio.wait(tasks, timeout=timeout, return_when=asyncio.ALL_COMPLETED)
+#
+#     logger.debug(f'scraping completed after {time.time() - start} seconds')
+#     for res in finished:
+#         result = res.result()
+#         if not isinstance(result, BaseException):
+#             res_map[result.link] = result
+#     return list(res_map.values())
+
+import asyncio
+import time
+from typing import List
+
+async def scrape_results(results: List[SearchResult], timeout: int = 6) -> List[SearchResult]:
+    res_map = {r.link: r for r in results}
+    tasks = [asyncio.wait_for(scrape_text(result), timeout=timeout) for result in results]
+    start = time.time()
+
+    finished, unfinished = await asyncio.wait(tasks, return_when=asyncio.ALL_COMPLETED)
+
+    logger.debug(f'scraping completed after {time.time() - start} seconds')
+    for res in finished:
+        try:
+            result = res.result()
+            if not isinstance(result, BaseException):
+                res_map[result.link] = result
+        except asyncio.TimeoutError:
+            logger.debug(f'Task timed out after {timeout} seconds')
+    return list(res_map.values())
+
 async def summarize_text(text, question, source: Optional[str] = None, max_tokens=500) -> Optional[TextSummary]:
     if not text:
         logger.warning('No text to summarize')
@@ -123,11 +162,9 @@ async def summarize_text(text, question, source: Optional[str] = None, max_token
 
     combined_summary = "\n".join(summaries)
     messages = [create_message(combined_summary, question)]
-    final_summary = await async_chat_completion(ChatRequest.from_messages(messages=messages,max_tokens=max_tokens))
+    final_summary = await async_chat_completion(ChatRequest.from_messages(messages=messages, max_tokens=max_tokens))
     if final_summary.reply:
         source = source or hashlib.md5(text).hexdigest()
         return TextSummary(source=source, summary=final_summary.reply)
     else:
         return None
-
-
