# server/services/search.py
@@ -12,35 +12,38 @@ from server.models.base import SearchResult
 from server.services.browse import scrape_text, scrape_links, summarize_text, TextSummary
 
 
-def google_search(query, num_results=8):
-    search_results = []
-    for j in ddg(query, max_results=num_results):
-        search_results.append(j)
-
-    return json.dumps(search_results, ensure_ascii=False, indent=4)
+def google_search(query, num_results=8) -> List[SearchResult]:
+    try:
+        ddg_results = ddg(query, max_results=num_results)
+        return list(filter(lambda s: s.link, [
+            SearchResult(link=ddg_dict.get('href', ''), title=ddg_dict.get('title', ''),
+                         snippet=ddg_dict.get('body', ''))
+            for ddg_dict in ddg_results]))
+    except HttpError as e:
+        error_details = json.loads(e.content.decode())
+        if error_details.get("error", {}).get("code") == 403 and "invalid API key" in error_details.get("error",
+                                                                                                        {}).get(
+            "message", ""):
+            logger.error("Error: The provided Google API key is invalid or missing.")
+        else:
+            logger.error(f"Error: {e}")
+        raise e
 
 
 google_api_key = os.environ['GOOGLE_API_KEY']
 custom_search_engine_id = os.environ['CUSTOM_SEARCH_ENGINE_ID']
 
 
-def google_official_search(query, num_results=8) -> Optional[List[str]]:
+def google_official_search(query, num_results=8) -> List[SearchResult]:
     try:
-        # Get the Google API key and Custom Search Engine ID from the config file
-
-        # Initialize the Custom Search API service
         service = build("customsearch", "v1", developerKey=google_api_key)
-
-        # Send the search query and retrieve the results
         result = service.cse().list(q=query, cx=custom_search_engine_id, num=num_results).execute()
-
-        # Extract the search result items from the response
         search_results = result.get("items", [])
+        return list(filter(lambda s: s.link, [
+            SearchResult(link=item.get('link', ''), title=item.get('title', ''),
+                         snippet=item.get('snippet', ''))
+            for item in search_results]))
 
-        # Create a list of only the URLs from the search results
-        search_results_links = [item["link"] for item in search_results]
-        # Return the list of search result URLs
-        return search_results_links
     except HttpError as e:
         # Handle errors in the API call
         error_details = json.loads(e.content.decode())
@@ -52,7 +55,7 @@ def google_official_search(query, num_results=8) -> Optional[List[str]]:
             logger.error("Error: The provided Google API key is invalid or missing.")
         else:
             logger.error(f"Error: {e}")
-        return None
+        raise e
 
 
 # async def browse_website(url, question):
@@ -66,8 +69,6 @@ def google_official_search(query, num_results=8) -> Optional[List[str]]:
 #     result = f"""Website Content Summary: {summary}\n\nLinks: {links}"""
 #
 #     return result
-
-
 async def get_text_summaries(urls: List[str] | str, question: str, num_sources: int = 1, max_tokens: int = 500) -> \
         Optional[List[SearchResult]]:
     results = []
